2006-10-29 Kilian Krause <kk@verfaction.de>

	* man/ekiga.1: Fix spelling errors as reported in Debian bug #395831.

2006-10-29 Kilian Krause <kk@verfaction.de>

	* src/Makefile.am: Fix double prefix of src/ to clients/ils.*
	  causing dist target to fail.

2006-10-28  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-gmconf.cpp lib/gui/gmcodecsbox.cpp,
	lib/gui/gmpowermeter.c lib/gui/gmroster.cpp:
	Fixed leaks.

2006-10-24  Damien Sandras  <dsandras@gnome.org>

	* lib/gui/gmconfwidgets.c lib/gui/gmpreferences.c:
	Started removing deprecated widgets in order to allow an automatic
	ellipsis in the menus.

2006-10-23  Damien Sandras  <dsandras@gnome.org>

	* src/gui/accounts.cpp src/gui/druid.cpp:
	Fixed bug when introducing a new ekiga.net account through the druid.
	Sometimes the account was not saved.

2006-10-23  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts-gmconf.cpp: replaced rindex by strrchr,
	since they're equivalent and mingw lacks rindex.

2006-10-15  Damien Sandras  <dsandras@gnome.org>

	* pixmaps/Makefile.am,
	pixmaps/status-freeforchat.png (Added),
	pixmaps/status-freeforchat-16.png (Removed):
	Changed free for chat icon.

2006-10-14  Jan Schampera <jan.schampera@unix.net>

	* src/gui/statusicon.cpp:
	Fixed macro reference.

2006-10-14  Damien Sandras  <dsandras@gnome.org>

	* pixmaps/addressbook.png:
	Added missing file.

2006-10-13  Damien Sandras  <dsandras@gnome.org>
	
	* src/gui/main.cpp src/gui/addressbook.cpp 
	lib/gui/gmstockicons.c lib/gui/gmstockicons.h 
	pixmaps/Makefile.am:
	Added new icons for the address book.
	* pixmaps/addressbook-16.png pixmaps/addressbook-24.png:
	Removed Files.

2006-10-13  Damien Sandras  <dsandras@gnome.org>

	* lib/gui/gmmenuaddon.c lib/gui/gmmenuaddon.h:
	Added possibility to associate a closure to delete the data passed to
	a callback in a menu.

	* src/gui/contacts.cpp src/gui/contacts.h:
	Use the new closure callbacks defined for the menus in order to be able