@@ -1,3 +1,8 @@
+2006-10-31  Julien Puydt  <jpuydt@free.fr>
+
+	* lib/gmconf/gmconf-glib.c: Fixed some g_return_if_fail which
+	should have been g_return_val_if_fail.
+
 2006-10-29 Kilian Krause <kk@verfaction.de>
 
 	* man/ekiga.1: Fix spelling errors as reported in Debian bug #395831.
